--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,15 @@
         "php": ">=5.4.0",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
-        "noumo/easyii": "dev-master"
+        "noumo/easyii": "dev-master",
+        "purrweb/yii2-heroku": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
+        "yiisoft/yii2-faker": "*",
+        "purrweb/yii2-heroku": "*"
     },
     "scripts": {
         "post-create-project-cmd": [
