--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.4.0",
+        "php": "~5.5.36",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
         "noumo/easyii": "dev-master",
